# esp32_c3_16M_OTA_APP

./: README.md
ESP32-C3-OTA-Webserver/: partitions.csv  sdkconfig  sdkconfig.old
ESP32-C3-OTA-Webserver/main/: MyWiFi.c
GIT版本管理/: 版本管理.mk  示例.txt
OTA_WEBSERVER_APP 模版/: sdkconfig  sdkconfig.old
OTA_WEBSERVER_APP 模版/main/: Kconfig.projbuild  MyWiFi.c  main.c
OTA_WEBSERVER_APP_Air_conditioner_controller/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
OTA_WEBSERVER_APP_Air_conditioner_controller/components/Auxgroup/: CMakeLists.txt
OTA_WEBSERVER_APP_Air_conditioner_controller/components/Auxgroup/include/: ir_parser_rmt_YKR_T_091.h
OTA_WEBSERVER_APP_Air_conditioner_controller/components/Auxgroup/src/: ir_builder_rmt_YKR_T_091.c  ir_parser_rmt_YKR_T_091.c
OTA_WEBSERVER_APP_Air_conditioner_controller/components/Gree/: CMakeLists.txt
OTA_WEBSERVER_APP_Air_conditioner_controller/components/Gree/include/: ir_parser_rmt_YAPOF3.h
OTA_WEBSERVER_APP_Air_conditioner_controller/components/Gree/src/: ir_builder_rmt_YB0F2.c  ir_parser_rmt_YAPOF3.c
OTA_WEBSERVER_APP_Air_conditioner_controller/main/: ADC1_single_read_Task.c  BLE_Client.c  BLE_Client.h  CMakeLists.txt  ESP32_C3_SOC_Temp_Task.c  ESP32_C3_SOC_Temp_Task.h  Kconfig.projbuild  MyWiFi copy.c  MyWiFi.c  MyWiFi.c.bak  MyWiFi.h  OTAServer.c  OTAServer.h  app_inclued.h  app_init.c  app_init.h  ble_adv_scan_Task.c  cpu_timer.c  cpu_timer.h  ds18b20_Task.c  ds18b20_task.h  htmltomcu.c  htmltomcu.h  ir_builder_rmt_YB0F2.c  ir_builder_rmt_YKR_T_091.c  ir_parser_rmt_YAPOF3.c  ir_parser_rmt_YKR_T_091.c  main.c  (+18 more)
(+20 files in other folders)
